--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,74 @@
 
 /* =============================================
 
+Navigation Styling
+
+===============================================*/
+
+header {
+  padding: 1% 10%;
+  background-color: #8B1F41;
+  position: relative;
+}
+
+header img {
+  margin: 5px 0 0;
+}
+
+header nav {
+  float: right;
+  position: absolute;
+  top: 40%;
+  right: 10%;
+}
+
+header nav ul li {
+  display: inline-block;
+  list-style: none;
+}
+
+header nav ul li a {
+  text-decoration: none;
+  color: white;
+  margin: 0 30px;
+}
+
+/* =============================================
+
+Universal Styling
+
+===============================================*/
+main {
+  min-height: 77vh;
+}
+/* =============================================
+
+Footer Styling
+
+===============================================*/
+
+footer {
+  background-color: #8B1F41;
+}
+
+footer ul {
+  text-align: center;
+}
+
+footer ul li {
+  display: inline-block;
+  list-style: none;
+  color: white;
+  margin: 1% 10%;
+}
+
+footer ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+/* =============================================
+
 Resume Styling
 
 ===============================================*/
