--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,33 @@ Universal Styling
 ===============================================*/
 main {
   min-height: calc(100vh - 157px);
+  width: 75%;
+  margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Source Code Pro',monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  color: #200d13;
+}
+
+h2 {
+  margin: 10px 0;
+}
+
+p,
+a,
+li {
+  font-family: 'Lato', sans-serif;
 }
 /* =============================================
 
@@ -107,6 +134,71 @@ Resume Styling
 
 /* =============================================
 
+Flip Cards
+
+===============================================*/
+
+.cards {
+  width: 65%;
+  margin: 0 auto;
+}
+
+.flip-card {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  background: transparent;
+  margin: 1% 5%;
+}
+
+.flip-card img {
+  width: 100%;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform .5s;
+  transform-style: preserve-3d;
+  box-shadow: 1px 1px 4px 2px #0021a5;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+
+.flip-card-back {
+  background-color: #0021a5;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.flip-card p {
+  padding: 13px 5px;
+  font-size: 80%;
+  color: white;
+}
+
+.flip-card a {
+  color: #E87722;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+
+/* =============================================
+
 Lightbox Styling
 
 ===============================================*/
@@ -156,4 +248,32 @@ Progress Bars
   width: 60%;
   background-color: #E87722;
   height: 10px;
+}
+
+.expert,
+.intermediate-high,
+.intermediate,
+.half {
+  animation: grow .5s  linear forwards;
+}
+
+/* =============================================
+
+Animation
+
+===============================================*/
+
+@keyframes grow {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(1);
+  }
+}
+
+@keyframes test {
+  0% {
+    transform:
+  }
 }
